Fix remaining alignment issues

--- a/assets/sass/helpers.sass
+++ b/assets/sass/helpers.sass
@@ -6,3 +6,17 @@
 
 =panel-width($w)
   flex: 0 0 $w
+
+=fixed
+  position: fixed
+
+=flex
+  display: flex
+
+=column
+  +flex
+  flex-direction: column
+
+=row
+  +flex
+  flex-direction: row
